// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calcDefinitionMap basic1 1`] = `
Object {
  "bar": Object {
    "identifier": "bar",
    "label": "bar",
    "title": "title2",
    "type": "definition",
    "url": "/bar",
  },
  "baz": Object {
    "identifier": "baz",
    "label": "baz",
    "type": "definition",
    "url": "/waw",
  },
  "logo": Object {
    "identifier": "logo",
    "label": "logo",
    "title": "The logo of Yozora",
    "type": "definition",
    "url": "/img/logo.png",
  },
  "url2": Object {
    "identifier": "url2",
    "label": "url2",
    "type": "definition",
    "url": "../url//ss/s/./../sd",
  },
}
`;

exports[`calcDefinitionMap presetDefinitions 1`] = `
Object {
  "bar": Object {
    "identifier": "bar",
    "label": "bar",
    "title": "title2",
    "type": "definition",
    "url": "/bar",
  },
  "baz": Object {
    "identifier": "baz",
    "label": "baz",
    "type": "definition",
    "url": "/waw",
  },
  "logo": Object {
    "identifier": "logo",
    "label": "logo",
    "title": "The logo of Yozora",
    "type": "definition",
    "url": "/img/logo.png",
  },
  "url2": Object {
    "identifier": "url2",
    "label": "url2",
    "type": "definition",
    "url": "../url//ss/s/./../sd",
  },
  "yozora__test_identifier": Object {
    "identifier": "yozora__test_identifier",
    "label": "yozora test label",
    "title": "waw",
    "type": "definition",
    "url": "#/",
  },
}
`;

exports[`calcIdentifierMap basic1 default 1`] = `
Object {
  "bar": true,
  "baz": true,
  "logo": true,
  "url2": true,
}
`;

exports[`calcIdentifierMap basic1 presetIdentifiers 1`] = `
Object {
  "bar": true,
  "baz": true,
  "foooo": true,
  "logo": true,
  "url2": true,
}
`;

exports[`collectDefinitions basic1 1`] = `
Array [
  Object {
    "identifier": "logo",
    "label": "logo",
    "title": "The logo of Yozora",
    "type": "definition",
    "url": "/img/logo.png",
  },
  Object {
    "identifier": "bar",
    "label": "bar",
    "title": "title2",
    "type": "definition",
    "url": "/bar",
  },
  Object {
    "identifier": "baz",
    "label": "baz",
    "type": "definition",
    "url": "/waw",
  },
  Object {
    "identifier": "url2",
    "label": "url2",
    "type": "definition",
    "url": "../url//ss/s/./../sd",
  },
]
`;
